2017-12-04  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Archive.pl: Fix parameter order

2017-12-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Archive.swg (read_finish_file_cb): Fix parameter order

2017-11-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: Accept --target asa synonyme for
	  --directory

2017-11-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.5.1

2017-11-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/protocol.c: Use correct macro to find if we have
	  getservbyname_r

2017-11-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/security-util.c: Fix bad indentation

2017-11-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway <nathanst@ontko.com>
	* man/xml-source/amanda-changers.7.xml,
	  man/xml-source/amfetchdump.8.xml: Fix typo

2017-11-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/file.c, common-src/security-util.c: Remove useless
	  assignment

2017-11-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Nathan Stratton Treadway <nathanst@ontko.com>
	* man/xml-source/amanda.conf.5.xml: Improve documentation

2017-11-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/runtar.c, common-src/amservice.c,
	  device-src/device.c, device-src/s3.c,
	  device-src/xfer-dest-device.c, device-src/xfer-dest-taper-cacher.c,
	  device-src/xfer-dest-taper-directtcp.c,
	  device-src/xfer-dest-taper-splitter.c,
	  device-src/xfer-dest-taper.c, device-src/xfer-source-recovery.c,
	  perl/Amanda/Util.swg, server-src/driver.c,
	  server-src/xfer-dest-holding.c, server-src/xfer-source-holding.c,
	  xfer-src/dest-application.c, xfer-src/dest-buffer.c,
	  xfer-src/filter-process.c, xfer-src/source-random.c:: Fix more
	  issue found by the clang analyzer

2017-11-25  Jean-Louis Martineau <JMartineau@carbonite.com>